amended some spacing issues with about page

--- a/css/main.css
+++ b/css/main.css
@@ -354,9 +354,8 @@ article
 {
 	font-size: 14px;
 	text-align: left;
-	border-radius: 5px;
-  	padding: 20px;
-  	text-align: left;
+  padding: 20px;
+  text-align: left;
  	margin: 10px;
 
 }
@@ -382,21 +381,8 @@ article
 	margin-bottom: 20px;
 }
 
-
 /*end of the aboutText*/
 
-/*start of about profile section*/
-
-/*#profileconUpper
-{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	width: 1120px;
-	height: 400px;
-	margin-top: 50px;
-}
-*/
 
 .aboutProducts1
 {
@@ -2209,6 +2195,8 @@ video {
 		display: flex;
 		flex-direction: column;
 		width: 50%;
+		padding-left: 20px;
+
 	}
 
 
